--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
             android:name=".activities.AddNewPlaceMapsActivity"
             android:label="@string/title_activity_add_new_place_maps" />
         <activity android:name=".activities.AddNewPlaceActivity" />
+        <activity android:name=".activities.VisitedActivity"/>
     </application>
 
 </manifest>
